--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1> Mona </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Password Manager</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    Tech used: HTML, CSS, JavaScript, FireBase, Github Pages, Encryption </br></br>
+    <form>
+      <div class='fieldset'>
+        <label for='masterPass'>Master Password:</label>
+        <input type='password' id='masterPass' placeholder='Password'/>
+      </div>
+      <div class='fieldset'>
+        <button type='submit'>Decrypt</button>
+      </div>
+      <div class='fieldset'>
+        <label for='text1'>Label:</label>
+        <input type='text' id='text1' placeholder='Site / Service / Username'/>
+      </div>
+        <div class='fieldset'>
+        <label for='text1'>Password:</label>
+        <input type='text' id='labelInput' placeholder='Password'/>
+      </div>
+      <div class='fieldset'>
+        <button type='submit'>Add</button>
+      </div>
+    </form>
+  </body>
+</html>
